changed status to 'Draft'

--- a/pep-9999.rst
+++ b/pep-9999.rst
@@ -2,11 +2,10 @@ PEP: 9999
 Title: Sample reStructuredText PEP Template
 Author: Not David Goodger <goodger@python.org>,
         Not Barry Warsaw <barry@python.org>
-Status: Not Active
+Status: Draft
 Type: Process
 Content-Type: text/x-rst
 Created: Not 05-Aug-2002
-Post-History: Not 30-Aug-2002
 
 
 Abstract
